# voxflow

./: .gitignore  DECISIONS.md  LICENSE  NOTES.md  PRODUCT.md  PROGRESS.md  README.md  RELEASE_NOTES.md  WORKFLOW.md
.github/workflows/: build-installer.yml  ci.yml  release-macos-arm64.yml  release-v1.0.8-hotfix.yml  release.yml
docs/: AUDIT.md  PLAN.md
docs/notes/: eval-wer-saturation.md  wave-by-file.md
installer/: QA-VoxFlow-v0.4.0-local.md  QA-VoxFlow-v1.0-local.md  VoxFlow.iss
installer/assets/: build_neon_art.py  build_setup_icon.py  concept_graphite-platinum.py  concept_midnight-steel.py  concept_warm-noir.py
script/: build_and_run.sh  build_macos_arm64_release.sh  check_versions.py  fetch_windows_runtime.ps1
script/patches/: whisper.cpp-v1.8.6-macos11.patch
tools/: add_noise.py  eval_phrases.json  gen_eval_set.ps1  run_eval.py  wer.py
voxflow/: README.md  index.html  package-lock.json  package.json
voxflow/branding/: build_icon.py  build_installer_art.py  installer-header.html  installer-sidebar.html  preview.html
voxflow/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
voxflow/src-tauri/capabilities/: default.json
voxflow/src-tauri/icons/: icon.icns
voxflow/src-tauri/installer/: hooks.nsh
voxflow/src-tauri/prompts/: voiceflow_ru.txt
voxflow/src-tauri/src/: app_context.rs  asr.rs  audio.rs  cloud_stt.rs  commands.rs  db.rs  engine.rs  gemini.rs  gigaam.rs  hotkey.rs  inject.rs  lib.rs  macos_permissions.rs  main.rs  models.rs  net.rs  ollama.rs  parakeet.rs  paths.rs  postprocess.rs  rewrite.rs  settings.rs  system_audio.rs  updater.rs  vad.rs  voice_cmds.rs
(+35 files in other folders)
