[package]
name = "voxflow"
version = "1.0.0"
description = "Local-first voice dictation for Windows"
authors = ["VoxFlow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voxflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.3"
hound = "3.5.1"
rdev = "0.5.3"
enigo = "0.6.1"
arboard = "3.6.1"
anyhow = "1.0.102"
thiserror = "2.0.18"
parking_lot = "0.12.5"
dirs = "6.0.0"
log = "0.4.30"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22.1"
windows = { version = "0.61.3", features = ["Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com"] }
# ONNX Runtime для GigaAM-v3 (русский ASR) и Silero VAD. Статическая линковка
# prebuilt-бинарей (download-binaries) — cmake/clang не нужны, onnxruntime.dll
# не дистрибутируется. CPU EP по умолчанию.
ort = "=2.0.0-rc.12"
